fix(Settings):fixed overflow when resizing window

--- a/src/components/apps/Settings.module.scss
+++ b/src/components/apps/Settings.module.scss
@@ -2,14 +2,5 @@
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: 1fr;
-  min-height: 100%;
-}
-
-.tabs {
-  border-right: 1px solid var(--cvos-divider);
-}
-
-.box {
-  display: grid;
-  row-gap: 1rem;
+  height: 100%;
 }
